--- a/.gitignore
+++ b/.gitignore
@@ -13,9 +13,5 @@ build/
 /captures
 .externalNativeBuild
 .cxx
-iosApp/Podfile.lock
-iosApp/Pods/*
-iosApp/iosApp.xcworkspace/*
-iosApp/iosApp.xcodeproj/*
-!iosApp/iosApp.xcodeproj/project.pbxproj
-shared/shared.podspec
+exampleJsApp/node_modules
+exampleJsApp/packages_imported
