Separated JS library project
Improved gradle configuration
Added automated updating of JS library code to the example application
Simplified project structure
Simplified JS export annotations (w/ extra gradle opt-in)

--- a/exampleJsApp/package.json
+++ b/exampleJsApp/package.json
@@ -3,7 +3,9 @@
   "version": "unspecified",
   "resolutions": {},
   "devDependencies": {},
-  "dependencies": {},
+  "dependencies": {
+    "@comunica/query-sparql": "2.6.9"
+  },
   "peerDependencies": {},
   "optionalDependencies": {},
   "bundledDependencies": []
