Further integrated streaming-based querying through comunica
Added JS types AsyncGenerator & AsyncIterator
Added JS-specific base module for pure JS functions (incomplete gradle config)
Improved query binding integration
Added conversion from Comunica's AsyncIterator<T> type to stream
Improved steam integration w/ generic types
Query improvements
Disabled SolidConnection for now
Added TripleProvider for input source types
Some refactoring

--- a/exampleJsApp/package.json
+++ b/exampleJsApp/package.json
@@ -2,11 +2,11 @@
   "name": "exampleJsApp",
   "version": "unspecified",
   "resolutions": {},
-  "devDependencies": {},
   "dependencies": {
-    "@comunica/query-sparql": "2.6.9"
+    "@comunica/query-sparql": "2.6.9",
+    "@comunica/query-sparql-file": "^2.7.1",
+    "n3": "1.16.4"
   },
-  "peerDependencies": {},
-  "optionalDependencies": {},
-  "bundledDependencies": []
+  "bundledDependencies": [],
+  "bundleDependencies": []
 }
