--- a/exampleJsApp/tsconfig.json
+++ b/exampleJsApp/tsconfig.json
@@ -1,5 +1,9 @@
 {
     "compilerOptions": {
+        "lib": [
+            "es2015",
+            "esnext.asynciterable"
+        ],
         "target": "es2015",
         "module": "commonjs",
         "sourceMap": true
