--- a/exampleJsApp/package.json
+++ b/exampleJsApp/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@comunica/query-sparql": "2.6.9",
     "@comunica/query-sparql-file": "^2.7.1",
+    "@js-joda/core": "^5.5.3",
     "n3": "1.16.4"
   },
   "bundledDependencies": [],
