Added initial ability to insert triples as source manually
Gradle changes for Incremunica integration (INCOMPLETE!)
Utilised Incremunica further w/ streams (manual input) through base dependency
Made `StreamingStore` "end-able" so it can be finished on flush/close
Changed generated SPARQL queries to no longer use `BIND`, as OOTB Incremunica does not support it
Added `encode` support for properties, delegating this step to the property directly
Added support for time identifiers w/ locales
Added dummy data generation adhering to stream shape for manual triple insertion testing
Added utility `streamify` method for triple-as-stream insertion (currently only supports a single item)
Removed some temporary methods

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ exampleJsApp/node_modules
 exampleJsApp/packages_imported
 exampleJsApp/package-lock.json
 kotlin-js-store/yarn.lock
+shared/src/jsMain/js/lib/
