--- a/shared/src/jsMain/js/package.json
+++ b/shared/src/jsMain/js/package.json
@@ -2,7 +2,8 @@
   "name": "base",
   "version": "1.0.0",
   "description": "",
-  "main": "main.js",
+  "main": "src/main.js",
+  "lsd:module": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
