Project structural changes
Added initial (incomplete) README
Restructured gradle files for improved legibility
Improved gradle task hierarchy
Improved output folder structure
Changed the example app to be a test app
Improved test app's dependency management
Removed old gradle config option

--- a/.gitignore
+++ b/.gitignore
@@ -13,8 +13,9 @@ build/
 /captures
 .externalNativeBuild
 .cxx
-exampleJsApp/node_modules
-exampleJsApp/packages_imported
-exampleJsApp/package-lock.json
+jsTest/node_modules
+jsTest/packages_imported
+jsTest/package-lock.json
 kotlin-js-store/yarn.lock
 shared/src/jsMain/js/lib/
+bin/
