Changes to querying/comunica integration
Changed `query` API by consuming the stream through callbacks
Removed compat-only async iterator method
Reduced severity and updated some of the log statements
Removed more coroutine related stuff, offloading the responsibility further to the callee
Added two gradle fixes: addition of missing type definition imports & installing resulting bin's dependencies
Changes to the test code example
Disabled manual insertion to reduce amount of async work for improved stability (can be re-enabled when stability is completely fixed)
Added additional stability to remote calls
Removed unused code
Fixed typos in README

--- a/jsTest/package.json
+++ b/jsTest/package.json
@@ -4,7 +4,8 @@
   "resolutions": {},
   "bundledDependencies": [],
   "dependencies": {
-    "ldests": "file:../bin/js"
+    "ldests": "file:../bin/js",
+    "n3": "^1.17.0"
   },
   "bundleDependencies": []
 }
