--- a/jsTest/package.json
+++ b/jsTest/package.json
@@ -7,5 +7,8 @@
     "ldests": "file:../bin/js",
     "n3": "^1.17.0"
   },
-  "bundleDependencies": []
+  "bundleDependencies": [],
+  "devDependencies": {
+    "@types/n3": "^1.16.0"
+  }
 }
