--- a/gradle.properties
+++ b/gradle.properties
@@ -6,3 +6,5 @@ kotlin.native.useEmbeddableCompilerJar=true
 kotlin.native.binary.memoryModel=experimental
 kotlin.version=1.9.0
 kotlin.js.ir.output.granularity=whole-program
+# Gradle dependencies
+ktor_version=2.3.3
