Improved build/package hierarchy
Added initial version name
Refactored JS module to omit `...Library`
Improved package building process with release and debug pack
Added README to the exported NPM build

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,6 @@
+# Main project version, matched with all build targets
+version=1.0.0-rc1
+# Other project settings
 kotlin.code.style=official
 org.gradle.jvmargs=-Xmx3g
 kotlin.native.cacheKind=none
